Programming Languages/Hw2/part4/t42.output
running e2c
compiling the C generated code
t42.c: In function ‘main’:
t42.c:4:2: error: expected expression before ‘=’ token
  = ;
  ^
t42.c:5:16: error: ‘a’ undeclared (first use in this function)
 printf("%d\n", a + );
                ^
t42.c:5:16: note: each undeclared identifier is reported only once for each function it appears in
t42.c:5:20: error: expected expression before ‘)’ token
 printf("%d\n", a + );
                    ^
t42.c:6:5: error: expected expression before ‘<=’ token
 if( <= 0){
     ^
t42.c:10:2: error: expected expression before ‘=’ token
  = ;
  ^
t42.c:12:17: error: expected expression before ‘)’ token
 printf("%d\n", ~);
                 ^
t42.c:17:17: error: expected expression before ‘)’ token
 printf("%d\n", ~);
                 ^
